Implemented a return to home page button
The return to home page is at the bottom of each recipe and allows the user to return the home page to view all the recipes.

--- a/recipes/crustless-grilledcheese.html
+++ b/recipes/crustless-grilledcheese.html
@@ -35,5 +35,7 @@
         <li>Place sandwich discs on a parchment-lined baking sheet and freeze for 2 hours before transferring into a freezer bag.</li>
         <li>Preheat the air fryer to 380 degrees F (193 degrees C). Cook frozen sandwiches until golden, about 5 minutes. If sandwiches are thawed, cook 3 minutes at 370 degrees F (188 degrees C).</li>
     </ol>
+
+    <a href="../index.html">Return To Home Page</a>
 </body>
 </html>
