--- a/recipes/basic-burger.html
+++ b/recipes/basic-burger.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crustless Grilled Cheese</title>
+    <title>Perfect Basic Burger</title>
 </head>
 <body>
     <h1>Perfect Basic Burger</h1>
@@ -35,5 +35,7 @@
         <li>Place patties on the preheated grill. Cover and cook 6 to 8 minutes per side, or to desired doneness. An instant-read thermometer inserted into the center should read at least 160 degrees F (70 degrees C).</li>
         <li>Serve hot and enjoy!</li>
     </ol>
+
+    <a href="../index.html">Return To Home Page</a>
 </body>
 </html>
